Refactor GatewayAssembly and CommandController for improved functionality and clarity
- Introduced DefaultRegistries in GatewayAssembly for better capability and plugin registration management.
- Updated CommandController to utilize CatalogApplyService for command submission, enhancing validation and error handling.
- Refactored GatewayPipeline initialization to incorporate new registries and streamline executor registration.
- Enhanced test coverage for GatewayApplicationTest, ensuring Flyway migration checks for catalog tables on startup.
- Improved ModbusBus and ModbusExecutor to support batch reading of numeric and boolean values, optimizing data retrieval processes.
- Added unsubscribe functionality in InMemoryMqttTransport and PahoMqttTransport for better topic management.
- Updated MqttBrokerConnection to enforce host validation and improve error handling for broker URI parsing.